| Bug #20161 | Information Schema for Partitions don't display LINEAR keyword for subpartition | ||
|---|---|---|---|
| Submitted: | 31 May 2006 7:00 | Modified: | 2 Jun 2006 5:31 |
| Reporter: | Mikael Ronstrom | Email Updates: | |
| Status: | Closed | ||
| Category: | Server: Partition | Severity: | S3 (Non-critical) |
| Version: | 5.1.9-beta | OS: | Linux (Red Hat RHAS4 x86) |
| Assigned to: | Mikael Ronstrom | Target Version: | |
[31 May 2006 7:00]
Mikael Ronstrom
[1 Jun 2006 12:14]
Mikael Ronstrom
Reviewed by gluh Will appear in 5.1.12
[2 Jun 2006 5:31]
Jon Stephens
Thank you for your bug report. This issue has been committed to our
source repository of that product and will be incorporated into the
next release.
If necessary, you can access the source repository and build the latest
available version, including the bugfix, yourself. More information
about accessing the source trees is available at
http://www.mysql.com/doc/en/Installing_source_tree.html
Additional info:
Documented in 5.1.12 changelog. Closed.
