BUG#20161: LINEAR keyword on subpartitions not displayed in information schema for partitions and in SHOW CREATE TABLE